# Botler

./: .gitignore  README.md  engine_pipe.py  engine_rps.py  main.py  matches.py  requirements.txt  rps.py  validity.py  validity.py~
back/: rps-bias_rock.py  rps-constant_p.py  rps-hist_4.py  rps-rando_5.py  rps-rando_stuffs.py  (+2 more)
game-engines/: build_and_run.sh  game-engines.cabal  rps.py  stack.yaml
game-engines/.stack-work/install/x86_64-osx/lts-3.8/7.10.2/flag-cache/: StateVar-1.1.0.1-d26cc6243f7eb7d8194c4fd0dccc0689  base-orphans-0.4.4-61f87fbe40b70a96b4f01742198bd89e  conduit-1.2.5-39cab96f36c8e12a64f7a5527587bc88  distributive-0.4.4-8ccf7d9b4dba827f6bbdf2f9c6ea65a1  dlist-0.7.1.2-31419d498459d3448eddd9aba0883e21  exceptions-0.8.0.2-b08bd0de7dff383d124cad3f4c34eddd  lifted-base-0.2.3.6-1dfd01e491e36bcf548a0a97190dea47  mmorph-1.0.4-dd38bfb9311d09724528d9d040ed8e39  monad-control-1.0.0.4-9b806c409db033e571fac7650e2dbb97  mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb  nats-1-3ca5cbcec233c17da785d5f27705643c  network-2.6.2.1-54f9bbbc4dc78b945fb82127414a5b82  parallel-3.2.0.6-75668556c9d11dfdadbfa90b3a42e694  prelude-extras-0.4.0.2-9cd8ab3397fab5f95aeab2ca5eb4ba56  primitive-0.6.1.0-842c44bae4dcc3c70cd2af42599ab93d  random-1.1-1229fa9ea3f9951a38fad637630a5acf  reflection-2-e399a859a760dc2259b0c5f750f24454  resourcet-1.1.6-c914af905523fb74e5d1ba80982db617  stm-2.4.4-2526ff89874f899372b2e4f544bb03cd  syb-0.5.1-09089498a055bd723b4a95c1351d3c8a  tagged-0.8.1-8fb7724b78ef88e44ca8950c77a173f6  transformers-base-0.4.4-47d17665c0db26ffcb68c46caa7346c1  transformers-compat-0.4.0.4-3ca5cbcec233c17da785d5f27705643c  zlib-0.5.4.2-ab334a392e5f54e8a0e7a1eab718c028
game-engines/src/: Lib.hs
(+30 files in other folders)
