name:                game-engines
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             Apache-2.0
license-file:        ../LICENSE
author:              Avi Weinstock
maintainer:          aweinstock314@gmail.com
copyright:           Avi Weinstock
category:            This field intentionally left blank
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , array
                     , bytestring
                     , conduit
                     , conduit-extra
                     , lens
                     , lens-aeson
                     , mtl
                     , text
                     , unordered-containers
  default-language:    Haskell2010

executable game-engines-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-engines
  default-language:    Haskell2010

test-suite game-engines-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , game-engines
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aweinstock314/game-engines
